--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ts-node src/index.ts"
+    "build": "tsc src/app.ts -w & pm2 start dist/app.js --watch"
   },
   "keywords": [],
   "author": "",
