--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && pm2 start ./dist/index.js --name phe-backend"
+    "build": "tsc && pm2 restart ./dist/index.js --name phe-backend"
   },
   "keywords": [],
   "author": "",
