--- a/.github/workflows/continous-deployment.yml
+++ b/.github/workflows/continous-deployment.yml
@@ -26,8 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: pm2 stop phe-backend
-    - run: pm2 delete phe-backend
+   # - run: pm2 stop phe-backend
+   # - run: pm2 delete phe-backend
     - run: npm ci
     - run: npm run build --if-present
     # - run: npm test
