--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
